feat(products): relation endpoints between branch and services
